Massive Commit